# ktimaz-studio

./: .gitignore  Ktimazstudio.keystore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: Android.yml  AndroidBuild.yml  Release.yml
app/: .gitignore  Antik.keystore  Ktimaz-studio.keystore  KtimazStudio.keystore  build.gradle.kts  dict.txt  gradle.properties  proguard-rules.pro
app/src/androidTest/java/com/ktimazstudio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ktimaz_security.h  ktimaz_security_jni.cpp
app/src/main/java/com/ktimazstudio/: Coming.kt  ComingActivity.kt  CrashActivity.kt  Generate.kt  KtimazApplication.kt  LoginScreen.kt  MainActivity.kt  SettingsActivity.kt  SplashScreen.kt  dev.kt
app/src/main/java/com/ktimazstudio/activities/: ComingActivity.kt  SettingsActivity.kt
app/src/main/java/com/ktimazstudio/agent/: AgentActivity.kt  AgentScreen.kt  AgentViewModel.kt
app/src/main/java/com/ktimazstudio/agent/data/: AppTheme.kt  DataLayer.kt  Models.kt  PreferenceManager.kt  SimpleDataManager.kt
app/src/main/java/com/ktimazstudio/agent/theme/: Theme.kt
app/src/main/java/com/ktimazstudio/agent/ui/: AgentScreen.kt
app/src/main/java/com/ktimazstudio/agent/ui/components/: ChatInterface.kt  InputBar.kt  MessageBubble.kt  Sidebar.kt  TopBar.kt
app/src/main/java/com/ktimazstudio/agent/ui/data/: Models.kt  PreferenceManager.kt
app/src/main/java/com/ktimazstudio/agent/ui/settings/: ApiManagementSettings.kt  GeneralSettings.kt  PlanSettings.kt  SettingsModal.kt
app/src/main/java/com/ktimazstudio/agent/viewmodel/: AgentViewModel.kt
app/src/main/java/com/ktimazstudio/data/: Screen.kt  SecurityIssue.kt  ThemeSetting.kt
app/src/main/java/com/ktimazstudio/enums/: AnimationSpeed.kt  CardSize.kt  DashboardViewType.kt  LayoutDensity.kt  ModuleCategory.kt  NavigationStyle.kt  Screen.kt  SecurityIssue.kt  ThemeSetting.kt
app/src/main/java/com/ktimazstudio/enums/new/: NavigationStyle.kt
app/src/main/java/com/ktimazstudio/manager/: SecurityManager.kt  SharedPreferencesManager.kt  SoundEffectManager.kt
app/src/main/java/com/ktimazstudio/managers/: ApplicationManager.kt  SecurityManager.kt  SharedPreferencesManager.kt  SoundEffectManager.kt
app/src/main/java/com/ktimazstudio/managers/new/: EnhancedSharedPreferencesManager.kt
app/src/main/java/com/ktimazstudio/navigation/: ComingNavigation.kt
app/src/main/java/com/ktimazstudio/old/managers/: OldSoundEffectManager.kt
app/src/main/java/com/ktimazstudio/old/ui/: OldMainApplicationUI.kt
app/src/main/java/com/ktimazstudio/old/ui/components/: OldNavigationRail.kt
app/src/main/java/com/ktimazstudio/old/ui/screens/: OldDashboardScreen.kt  OldProfileScreen.kt  OldSettingsScreen.kt
app/src/main/java/com/ktimazstudio/ui/: MainApplicationUI.kt
app/src/main/java/com/ktimazstudio/ui/components/: AnimatedCardGrid.kt  AppNavigationRail.kt  BottomNav.kt  CustomSearchBar.kt  NavigationRail.kt  SecurityAlertScreen.kt  SettingItem.kt  SettingSection.kt
app/src/main/java/com/ktimazstudio/ui/components/new/: AdaptiveNavigation.kt
app/src/main/java/com/ktimazstudio/ui/screens/: DashboardScreen.kt  EnhancedDashboardScreen.kt  EnhancedSettingsScreen.kt  LoginScreen.kt  MainApplicationUI.kt  ProfileScreen.kt  SecurityAlertScreen.kt  SettingsScreen.kt
app/src/main/java/com/ktimazstudio/ui/screens/new/: EnhancedDashboardScreen.kt  EnhancedSettingsScreen.kt
app/src/main/java/com/ktimazstudio/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/ktimazstudio/util/: Utils.kt
app/src/main/java/com/ktimazstudio/utils/: CryptoUtils.kt  EnhancedSecurityManager.kt  NetworkSecurity.kt  NetworkUtils.kt  ThemeUtils.kt
app/src/main/res/drawable/: Chat.xml  Email.xml  Language.xml  ScreenShare.xml  screen_share.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/ktimazstudio/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
